--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/font/inter.css" />
 </head>
 
-<body class="flex flex-col min-h-screen text-center">
+<body class="flex flex-col min-h-screen text-center bg-[#FBFBFB] ">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
